// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button large 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1dafa1",
        "borderRadius": 5,
        "height": 66.5,
        "justifyContent": "center",
        "opacity": 1,
        "width": 525,
      }
    }
  >
    <Text
      color="white"
      size="medium"
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 16,
          },
        ]
      }
    >
      Hello Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button medium 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1dafa1",
        "borderRadius": 5,
        "height": 66.5,
        "justifyContent": "center",
        "opacity": 1,
        "width": 300,
      }
    }
  >
    <Text
      color="black"
      size="medium"
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 16,
          },
        ]
      }
    >
      Hello Button
    </Text>
  </View>
</View>
`;

exports[`Storyshots Input error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autocorrect={false}
      error={true}
      errorMessage="Please enter an email address"
      onChangeText={[Function]}
      placeholder="Username"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "borderColor": "#EF594C",
            "borderRadius": 5,
            "borderWidth": 1,
            "height": 66.5,
            "overflow": "hidden",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": 525,
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
    <Text
      color="#EF594C"
      size="medium"
      style={
        Array [
          Object {
            "color": "#EF594C",
            "fontSize": 16,
          },
        ]
      }
    >
      Please enter an email address
    </Text>
  </View>
</View>
`;

exports[`Storyshots Input no error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autocorrect={false}
      error={false}
      onChangeText={[Function]}
      placeholder="Username"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "borderColor": "lightgray",
            "borderRadius": 5,
            "borderWidth": 1,
            "height": 66.5,
            "overflow": "hidden",
            "paddingBottom": 10,
            "paddingLeft": 10,
            "paddingRight": 10,
            "paddingTop": 10,
            "width": 525,
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
</View>
`;

exports[`Storyshots LoginScreen API error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2a5798",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        color="black"
        size="medium"
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
            },
          ]
        }
      >
        placeholder
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={false}
            errorMessage="Missing username"
            onChangeText={[Function]}
            placeholder="Username"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgray",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={false}
            errorMessage="Password must be greater than 8 characters"
            onChangeText={[Function]}
            placeholder="Password"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgray",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1dafa1",
              "borderRadius": 5,
              "height": 66.5,
              "justifyContent": "center",
              "opacity": 1,
              "width": 525,
            }
          }
        >
          <Text
            color="white"
            size="large"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
              ]
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots LoginScreen error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2a5798",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        color="black"
        size="medium"
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
            },
          ]
        }
      >
        placeholder
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={true}
            errorMessage="Missing username"
            onChangeText={[Function]}
            placeholder="Username"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "#EF594C",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            color="#EF594C"
            size="medium"
            style={
              Array [
                Object {
                  "color": "#EF594C",
                  "fontSize": 16,
                },
              ]
            }
          >
            Missing username
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={true}
            errorMessage="Password must be greater than 8 characters"
            onChangeText={[Function]}
            placeholder="Password"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "#EF594C",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            color="#EF594C"
            size="medium"
            style={
              Array [
                Object {
                  "color": "#EF594C",
                  "fontSize": 16,
                },
              ]
            }
          >
            Password must be greater than 8 characters
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1dafa1",
              "borderRadius": 5,
              "height": 66.5,
              "justifyContent": "center",
              "opacity": 1,
              "width": 525,
            }
          }
        >
          <Text
            color="white"
            size="large"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
              ]
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots LoginScreen form error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2a5798",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        color="black"
        size="medium"
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
            },
          ]
        }
      >
        placeholder
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={true}
            errorMessage="Missing username"
            onChangeText={[Function]}
            placeholder="Username"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "#EF594C",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            color="#EF594C"
            size="medium"
            style={
              Array [
                Object {
                  "color": "#EF594C",
                  "fontSize": 16,
                },
              ]
            }
          >
            Missing username
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={true}
            errorMessage="Password must be greater than 8 characters"
            onChangeText={[Function]}
            placeholder="Password"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "#EF594C",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
          <Text
            color="#EF594C"
            size="medium"
            style={
              Array [
                Object {
                  "color": "#EF594C",
                  "fontSize": 16,
                },
              ]
            }
          >
            Password must be greater than 8 characters
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1dafa1",
              "borderRadius": 5,
              "height": 66.5,
              "justifyContent": "center",
              "opacity": 1,
              "width": 525,
            }
          }
        >
          <Text
            color="white"
            size="large"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
              ]
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots LoginScreen loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2a5798",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        color="black"
        size="medium"
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
            },
          ]
        }
      >
        placeholder
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={false}
            errorMessage="Missing username"
            onChangeText={[Function]}
            placeholder="Username"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgray",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={false}
            errorMessage="Password must be greater than 8 characters"
            onChangeText={[Function]}
            placeholder="Password"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgray",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1dafa1",
              "borderRadius": 5,
              "height": 66.5,
              "justifyContent": "center",
              "opacity": 1,
              "width": 525,
            }
          }
        >
          <Text
            color="white"
            size="large"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
              ]
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots LoginScreen normal 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#2a5798",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        color="black"
        size="medium"
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 16,
            },
          ]
        }
      >
        placeholder
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={false}
            errorMessage="Missing username"
            onChangeText={[Function]}
            placeholder="Username"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgray",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autocorrect={false}
            error={false}
            errorMessage="Password must be greater than 8 characters"
            onChangeText={[Function]}
            placeholder="Password"
            rejectResponderTermination={true}
            style={
              Array [
                Object {
                  "backgroundColor": "white",
                  "borderColor": "lightgray",
                  "borderRadius": 5,
                  "borderWidth": 1,
                  "height": 66.5,
                  "overflow": "hidden",
                  "paddingBottom": 10,
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "paddingTop": 10,
                  "width": 525,
                },
              ]
            }
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "marginBottom": 20,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1dafa1",
              "borderRadius": 5,
              "height": 66.5,
              "justifyContent": "center",
              "opacity": 1,
              "width": 525,
            }
          }
        >
          <Text
            color="white"
            size="large"
            style={
              Array [
                Object {
                  "color": "white",
                  "fontSize": 20,
                },
              ]
            }
          >
            Login
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
